Continued work to add content and styling to floodlight case study

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -290,16 +290,118 @@
       </p>
       <h3 class="benefits-to-creative-design-headline">Benefits to Creative Design</h3>
       <p class="benefits-to-creative-design-intro">By eliminating the shift from Sketch wireframes to creative layout in Photoshop, we reduced the opportunities for human error and duplicative work. Sketch symbols eliminated the need to make repetitive updates across many layer comps. We shaved days off of our timeline and got our project approved through the client’s promotional reviews committee and handed off to the client’s development team on time.</p>
-
+      <figure class="creative-layout-homepage">
+        <img class="creative-layout-homepage-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <figcaption> Creative layout of homepage</figcaption>
+      </figure>
+      <figure class="creative-layout-homepahe-mobile">
+        <img class="creative-layout-homepahe-mobile-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <figcaption> Creative layout of mobile homepage</figcaption>
+      </figure>
+      <figure class="creative-layout-hcp">
+        <img class="creative-layout-hcp-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <figcaption> Creative layout of HCP page</figcaption>
+      </figure>
+      <figure class="creative-layout-hcp-mobile">
+        <img class="creative-layout-hcp-mobile-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <figcaption> Creative layout of mobile HCP page</figcaption>
+      </figure>
+      <figure class="activity-video-and-form-dropdown">
+        <img class="activity-video-and-form-dropdown-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <figcaption> Activity video & form dropdown</figcaption>
+      </figure>
+      <figure class="form-error-state">
+        <img class="form-error-state-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <figcaption>Form error state</figcaption>
+      </figure>
+      <figure class="intended-use-accordion">
+        <img class="intended-use-accordion-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <figcaption>Intended use accordion</figcaption>
+      </figure>
     </section>
 
     <section class="development-handoff">
-      <h2 class="development-handoff-headline">Development handoff</h2>
-      </section>
+      <h2 class="development-handoff">Development handoff</h2>
+      <h3 class="functional-specifications">Functional Specifications</h3>
+      <p class="functional-specification-intro">I prepared functional specifications to provide clear directions for the development team. Its essential to eliminate ambiguities that create development delays. This is the opportunity to specify exactly what external URL a button should direct to, what animations and interactions are associated with a component and specify any differences in behavior between breakpoints.</p>
+      <h4 class = "specifications-list-headline">The document contains specifications for:</h4>
+      <ul class="specifications-list">
+        <li><p>The sitemap</p></li>
+        <li><p>Global component specifications</p>
+          <ul class="global-component-sublist">
+              <li><p>Grid</p></li>
+              <li><p>Buttons</p></li>
+              <li><p>Colors</p></li>
+              <li><p>Typography</p></li>
+              <li><p>Primary Navigation</p></li>
+              <li><p>Global footer</p></li>
+              <li><p>Cookie bar</p></li>
+          </ul>
+        </li>
+        <li><p>Page-level specifications</p>
+          <ul class="global-component-sublist">
+              <li><p>HCP Page Interstitial</p></li>
+              <li><p>Initial Site Visit Interstitial </p></li>
+              <li><p>Broken Link Interstitial </p></li>
+              <li><p>Leaving Site Interstitial </p></li>
+              <li><p>Intended Use Notification Bar</p></li>
+              <li><p>Homepage</p></li>
+              <li><p>Customer Support Form Error & Success States</p></li>
+              <li><p>For HCPs</p></li>
+              <li><p>Request a Demo Form Error & Success States</p></li>
+              <li><p>404 Error Page</p></li>
+          </ul>
+        </li>
+      </ul>
+      <figure class="functional-specification-image">
+        <img class="func-spec-screen-shot" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <figcaption>New functional specifications prepared for handoff</figcaption>
+      </figure>
+      <p class="handoff-intro">The functional specifications and design files were provided to the cleint’s development team. Sketch design files were handed off to Roche IT via both Zeplin and Sketch Cloud. Both tools allowed for the development team to  easily see exact measurements of components, spaces between them, color hex and RGBA codes and download assets.</p>
+      <figure class="zeplin-1">
+        <img class="zeplin-1-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <figcaption>Exporting screens to Zeplin</figcaption>
+      </figure>
+      <figure class="zeplin-2">
+        <img class="zeplin-2-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <figcaption>Exporting screens to Zeplin</figcaption>
+      </figure>
+      <figure class="zeplin-3">
+        <img class="zeplin-3-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <figcaption>Exporting screens to Zeplin</figcaption>
+      </figure>
+      <h3 class="User acceptance testing">User Acceptance Testing</h3>
+      <p class="user-acceptance-testing-intro">During user acceptance testing (UAT) review of the staging environment, we navigated functionally challenges such as ensuring anchor links opened tabs appropriately and that videos showed the correct pre-play preview image and that GIFs played automatically for only 5 seconds or less,  according to accessibility guidelines. After several rounds of UAT review, the site was approved and went live on 7/28/21 at
+        <a href="https://www.floodlightms.com">floodlightms.com</a></p>
+      <figure class="final-homepage-layout">
+        <img class="homepage-layout-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <figcaption>Final homepage after UAT</figcaption>
+      </figure>
+      <figure class="final-hcp-page-layout">
+        <img class="homepage-hcp-page-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <figcaption>Final HCP page after UAT</figcaption>
+      </figure>
+
+    </section>
+
 
     <section class="key-takeaways">
       <h2 class="key-takeaways-headline">Key takeaways</h2>
-      </section>
+      <p class = "key-takeaways-intro">Within 24 hours of receiving the Sketch design file containing wireframes, the art direct team was able to return a full first draft of the layout. Despite being new to working Sketch, proper file preparation and educational resources allowed the team a quick turnaround.</p>
+      <h3 class="tips">Tips for a smooth handoff between UX and Creative</h3>
+      <p class="tips-intro">Prepare your sketch file thoughtfully</p>
+      <ul class="tips-list">
+        <li><p>Make the information clear and consistent for the next user in the project workflow:</p>
+          <ul class="tips-list-sublist">
+              <li><p>label items appropriately and consistently </p></li>
+              <li><p>Order screen sequentially</p></li>
+              <li><p>Use symbols when possible</p></li>
+              <li><p>Include a ReadMe to explain any special details</p></li>
+              <li><p>Take time to walk your teammate through the file before handoff</p></li>
+          </ul>
+        </li>
+      </ul>
+    </section>
 
     <footer class="footer">
       <p class = "footer-email">hello@jessblanchard.design</p>
