added additional content in prep for refining mobile media queries

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -294,7 +294,7 @@
         <img class="creative-layout-homepage-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption> Creative layout of homepage</figcaption>
       </figure>
-      <figure class="creative-layout-homepahe-mobile">
+      <figure class="creative-layout-homepage-mobile">
         <img class="creative-layout-homepahe-mobile-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption> Creative layout of mobile homepage</figcaption>
       </figure>
@@ -321,10 +321,10 @@
     </section>
 
     <section class="development-handoff">
-      <h2 class="development-handoff">Development handoff</h2>
+      <h2 class="development-handoff-headline">Development handoff</h2>
       <h3 class="functional-specifications">Functional Specifications</h3>
-      <p class="functional-specification-intro">I prepared functional specifications to provide clear directions for the development team. Its essential to eliminate ambiguities that create development delays. This is the opportunity to specify exactly what external URL a button should direct to, what animations and interactions are associated with a component and specify any differences in behavior between breakpoints.</p>
-      <h4 class = "specifications-list-headline">The document contains specifications for:</h4>
+      <p class="functional-specifications-intro">I prepared functional specifications to provide clear directions for the development team. Its essential to eliminate ambiguities that create development delays. This is the opportunity to specify exactly what external URL a button should direct to, what animations and interactions are associated with a component and specify any differences in behavior between breakpoints.</p>
+      <h4 class="specifications-list-headline">The document contains specifications for:</h4>
       <ul class="specifications-list">
         <li><p>The sitemap</p></li>
         <li><p>Global component specifications</p>
@@ -370,7 +370,7 @@
         <img class="zeplin-3-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>Exporting screens to Zeplin</figcaption>
       </figure>
-      <h3 class="User acceptance testing">User Acceptance Testing</h3>
+      <h3 class="user-acceptance-testing">User Acceptance Testing</h3>
       <p class="user-acceptance-testing-intro">During user acceptance testing (UAT) review of the staging environment, we navigated functionally challenges such as ensuring anchor links opened tabs appropriately and that videos showed the correct pre-play preview image and that GIFs played automatically for only 5 seconds or less,  according to accessibility guidelines. After several rounds of UAT review, the site was approved and went live on 7/28/21 at
         <a href="https://www.floodlightms.com">floodlightms.com</a></p>
       <figure class="final-homepage-layout">
@@ -383,7 +383,6 @@
       </figure>
 
     </section>
-
 
     <section class="key-takeaways">
       <h2 class="key-takeaways-headline">Key takeaways</h2>
