Continuing layout of case study

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -215,6 +215,45 @@
 
       <h3 class="sitemap-headline">Sitemap and content strategy</h3>
       <p class="sitemap-intro">Developing the phase two sitemap happened in close collaboration with the copywriting team. The primary homepage departed from 3 three main sections and expanded to 5. While the general functions on the preceding site would continue, they would be largely re-written and expanded before being placed along side brand new content.</p>
+
+      <table class="content-strategy-summary-table">
+            <tr class="table-peach">
+              <td class="story-role">
+                _____
+              </td>
+              <td class="story-activity">---->Overview
+              </td>
+            </tr>
+            <tr>
+              <td class="story-role">
+                HCP Section
+              </td>
+              <td class="story-activity">---->New HCP Page
+              </td>
+            </tr>
+            <tr class="table-peach">
+              <td class="story-role">
+                Patient section
+              </td>
+              <td class="story-activity">---->Features + Customer Support
+              </td>
+            </tr>
+            <tr>
+              <td class="story-role">
+                Resources Section
+              </td>
+              <td  class="story-activity">----->Resources Section
+              </td>
+            </tr>
+            <tr class="table-peach">
+              <td class="story-role">
+                _____
+              </td>
+              <td class="story-activity">----->New FAQ section
+              </td>
+            </tr>
+      </table>
+
       <figure class="content-strategy-summary">
         <img class="content-strategy-summary-image" src="images/image-placeholder.png" alt="Content strategy"></img>
         <figcaption> Inventorying what would be reimagined and what would be new</figcaption>
