Revising content strategy table

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -216,48 +216,40 @@
       <h3 class="sitemap-headline">Sitemap and content strategy</h3>
       <p class="sitemap-intro">Developing the phase two sitemap happened in close collaboration with the copywriting team. The primary homepage departed from 3 three main sections and expanded to 5. While the general functions on the preceding site would continue, they would be largely re-written and expanded before being placed along side brand new content.</p>
 
+      <h4 class="content-startegy-summary-table-header">Inventorying what would be reimagined and what would be new</h4>
       <table class="content-strategy-summary-table">
-            <tr class="table-peach">
-              <td class="story-role">
-                _____
+            <tr class="">
+              <td class="content-strategy-summary-table-data-column1-top"><p>_____</p>
               </td>
-              <td class="story-activity">---->Overview
-              </td>
-            </tr>
-            <tr>
-              <td class="story-role">
-                HCP Section
-              </td>
-              <td class="story-activity">---->New HCP Page
-              </td>
-            </tr>
-            <tr class="table-peach">
-              <td class="story-role">
-                Patient section
-              </td>
-              <td class="story-activity">---->Features + Customer Support
+              <td class="content-strategy-summary-table-data-column2-top"><p> ⟶ Overview</p>
               </td>
             </tr>
             <tr>
-              <td class="story-role">
-                Resources Section
+              <td class="content-strategy-summary-table-data-column1"><p>HCP Section</p>
               </td>
-              <td  class="story-activity">----->Resources Section
+              <td class="content-strategy-summary-table-data-column2"><p> ⟶ New HCP Page<p>
               </td>
             </tr>
-            <tr class="table-peach">
-              <td class="story-role">
-                _____
+            <tr class="">
+              <td class="content-strategy-summary-table-data-column1"><p>Patient section</p>
               </td>
-              <td class="story-activity">----->New FAQ section
+              <td class="content-strategy-summary-table-data-column2"><p> ⟶ Features + Customer Support</p>
+              </td>
+            </tr>
+            <tr>
+              <td class="content-strategy-summary-table-data-column1"><p>Resources Section</p>
+              </td>
+              <td class="content-strategy-summary-table-data-column2"><p> ⟶ Resources Section</p>
+              </td>
+            </tr>
+            <tr class="">
+              <td class="content-strategy-summary-table-data-column1-bottom"><p>_____</p>
+              </td>
+              <td class="content-strategy-summary-table-data-column2-bottom"><p> ⟶ New FAQ section</p>
               </td>
             </tr>
       </table>
 
-      <figure class="content-strategy-summary">
-        <img class="content-strategy-summary-image" src="images/image-placeholder.png" alt="Content strategy"></img>
-        <figcaption> Inventorying what would be reimagined and what would be new</figcaption>
-      </figure>
       <p class="content-strategy-intro">Although the inspiration sites were primarily one-page, this project required that a full new page needed to be incorporated for HCP content. This new page would introduce a cache of new provider directed content previously approved by GRC for use in other tactics. <br><br>In-kind, the complexity of the sitemap grew, as did the level of detail provided for each item mapped:</p>
       <ul class="content-strategy-list">
         <li><p>Overview: Provides HCP specific insight into the tool and its benefits</p></li>
