Adding additional headlines to images

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -259,6 +259,7 @@
         <li><p>HCP Support: Provides contact information for provider support</p></li>
         <li><p>Request a Demo: Allows providers to request a demo, ultimately driving them toward conversion</p></li>
       </ul>
+      <h4 class="revised-sitemap-image-title">Proposed Phase 2 Sitemap</h4>
       <figure class="phase-2-sitemap">
         <img class="phase-2-sitemap-image" src="images/floodlight-new-sitemap.png" alt="Content strategy"></img>
         <figcaption> The new sitemap</figcaption>
@@ -266,6 +267,7 @@
 
       <h3 class="manuscript-headline">The manuscript</h3>
       <p class="manuscript-intro">Written content for phase two was presented in a detailed manuscript. UX provided early insight into what components may be suitable for delivering unique content, such as cards, tables and tabs.</p>
+      <h4 class="manuscript-image-title">Phase 2 Manuscript</h4>
       <figure class="floodlight-manuscript">
         <img class="floodlight-manuscript-image" src="images/floodlight-manuscript-image.png" alt="Content strategy"></img>
         <figcaption>The new manuscript</figcaption>
@@ -273,7 +275,7 @@
 
       <h3 class="floodlight-wireframes">Wireframes</h3>
       <p class="floodlight-wireframe-intro">With the sitemap and manuscript approved by the client, it was time to plan individual page infastructure by preparing a set of wireframes.  The agency’s UX workflow may incorporate a variety of design tools for wireframing as directed by client need that include programs such as Sketch, Figma and Adobe XD.<br><br>Without a client directive, we primarily recommend Sketch because it’s an industry leader and provides a wide swath of functionality to design, prototype, and collaborate on projects. Sketch has partnerships for collaboration with some of our most commonly used tools, such as Zeplin, a resource for handing off design files to our client’s development teams and it provides a good balance of stability and expanding capabilities. New plugins mean that Sketch can be customized to meet a seemingly endless array of project needs.<br><br>Most importantly, Sketch files are increasingly becoming one of the most requested UX design deliverables for handoff.<br><br> As we moved forward with Sketch wireframes, our collaboration with copywriting had allowed for opportunity to provide feedback on what components would best tell the story in the manuscript. Those components were brought into wireframes and evolved through several iterations. </p>
-
+      <h4 class="floodlight-wireframe-images-title">Wireframes for the homepage and HCP page</h4>
       <figure class="floodlight-wireframe-homepage">
         <img class="floodlight-wireframe-homepage-image" src="images/floodlight-homepage-wireframe.png" alt="Content strategy"></img>
         <figcaption>Homepage wireframe</figcaption>
