Continued progress toward finishing Floodlight case study and misc.links

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -41,10 +41,10 @@
     <nav class="primary-navigation">
       <a class="logo" href="index.html">
         <img class="navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo" width="62" style="padding:0px;"></a>
-      <a class="nav-work" href="#work">About my work</a>
-      <a class="nav-about" href="#about">About me</a>
-      <a class="nav-resume" href="documents/jessica_blanchard_resume_2.9.2.pdf" target="_blank">Download my resume</a>
-      <button class="nav-contact" href="https://www.jessblanchard.design/contact.html">Get in contact</button>
+      <a class="nav-work" href="index-2.0.html#work">About my work</a>
+      <a class="nav-about" href="index-2.0.html#about">About me</a>
+      <a class="nav-resume" href="documents/jessica_blanchard_resume_02112022.pdf" target="_blank">Download my resume</a>
+      <button onclick="window.location.href = 'contact-2.0.html';">Get in contact</button>
       <!-- Original MOBILE NAV -->
           <nav class="mobilescreen">
                     <div title="Menu" id="menuToggle">
@@ -54,16 +54,16 @@
                         <span></span>
                          <ul id="menu">
                           <li>
-                            <a class="nav-work-mobile" href="#work">About my work</a>
+                            <a class="nav-work-mobile" href="index-2.0.html#work">About my work</a>
                            </li>
                            <li>
-                            <a class="nav-about-mobile" href="#about">About Me</a>
+                            <a class="nav-about-mobile" href="index-2.0.html#about">About Me</a>
                            </li>
                            <li>
-                             <a class="nav-resume-mobile" href="documents/jessica_blanchard_resume_2.9.2.pdf" target="_blank">Download my resume</a>
+                             <a class="nav-resume-mobile" href="documents/jessica_blanchard_resume_02112022" target="_blank">Download my resume</a>
                            </li>
                             <li>
-                              <button onclick="window.location.href = 'contact.html';">Get in contact</button>
+                              <button onclick="window.location.href = 'contact-2.0.html';">Get in contact</button>
                             </li>
                           </ul>
                       </div>
@@ -297,15 +297,15 @@
         <li><p>Employ symbols to update recurring components at one time.</p></li>
       </ul>
       <figure class="floodlight-wireframe-sketch-workspace">
-        <img class="floodlight-wireframe-sketch-workspace" src="images/image-placeholder.png" alt="Content strategy"></img>
+        <img class="floodlight-wireframe-sketch-workspace-image" src="floodlight-images/floodlight-wireframe-sketch-workspace.png" alt="Floodlight wireframe sketch workspace"></img>
         <figcaption>An organized sketch workspacee</figcaption>
       </figure>
       <figure class="floodlight-consistent-labeling">
-        <img class="floodlight-consistent-labeling-image" src="images/image-placeholder.png" alt="Content strategy"></img>
+        <img class="floodlight-consistent-labeling-image" src="floodlight-images/floodlight-consistent-labeling.png" alt="Consistent labeling of elements"></img>
         <figcaption>Clear and consistent element labeling</figcaption>
       </figure>
       <figure class="floodlight-sketch-symbols">
-        <img class="floodlight-sketch-symbols-image" src="images/image-placeholder.png" alt="Content strategy"></img>
+        <img class="floodlight-sketch-symbols-image" src="floodlight-images/floodlight-sketch-symbols.png" alt="Sketch symbols"></img>
         <figcaption>Symbols are used to minimize reetitive uopdates</figcaption>
       </figure>
 
@@ -324,31 +324,31 @@
       <h3 class="benefits-to-creative-design-headline">Benefits to Creative Design</h3>
       <p class="benefits-to-creative-design-intro">By eliminating the shift from Sketch wireframes to creative layout in Photoshop, we reduced the opportunities for human error and duplicative work. Sketch symbols eliminated the need to make repetitive updates across many layer comps. We shaved days off of our timeline and got our project approved through the client’s promotional reviews committee and handed off to the client’s development team on time.</p>
       <figure class="creative-layout-homepage">
-        <img class="creative-layout-homepage-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <img class="creative-layout-homepage-image" src="floodlight-images/creative-layout-homepage.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption> Creative layout of homepage</figcaption>
       </figure>
       <figure class="creative-layout-homepage-mobile">
-        <img class="creative-layout-homepahe-mobile-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <img class="creative-layout-homepage-mobile-image" src="floodlight-images/creative-layout-homepage-mobile.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption> Creative layout of mobile homepage</figcaption>
       </figure>
       <figure class="creative-layout-hcp">
-        <img class="creative-layout-hcp-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <img class="creative-layout-hcp-image" src="floodlight-images/creative-layout-hcp.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption> Creative layout of HCP page</figcaption>
       </figure>
       <figure class="creative-layout-hcp-mobile">
-        <img class="creative-layout-hcp-mobile-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <img class="creative-layout-hcp-mobile-image" src="floodlight-images/creative-layout-hcp-mobile.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption> Creative layout of mobile HCP page</figcaption>
       </figure>
       <figure class="activity-video-and-form-dropdown">
-        <img class="activity-video-and-form-dropdown-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <img class="activity-video-and-form-dropdown-image" src="floodlight-images/activity-video-and-form-dropdown.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption> Activity video & form dropdown</figcaption>
       </figure>
       <figure class="form-error-state">
-        <img class="form-error-state-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <img class="form-error-state-image" src="floodlight-images/form-error-state.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>Form error state</figcaption>
       </figure>
       <figure class="intended-use-accordion">
-        <img class="intended-use-accordion-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <img class="intended-use-accordion-image" src="floodlight-images/intended-use-accordion.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>Intended use accordion</figcaption>
       </figure>
     </section>
@@ -386,32 +386,32 @@
           </ul>
         </li>
       </ul>
-      <figure class="functional-specification-image">
-        <img class="func-spec-screen-shot" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+      <figure class="functional-specification-fig">
+        <img class="func-spec-screen-shot-image" src="floodlight-images/func-spec-screenshot-image.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>New functional specifications prepared for handoff</figcaption>
       </figure>
       <p class="handoff-intro">The functional specifications and design files were provided to the cleint’s development team. Sketch design files were handed off to Roche IT via both Zeplin and Sketch Cloud. Both tools allowed for the development team to  easily see exact measurements of components, spaces between them, color hex and RGBA codes and download assets.</p>
       <figure class="zeplin-1">
-        <img class="zeplin-1-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <img class="zeplin-1-image" src="floodlight-images/zeplin-1-image.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>Exporting screens to Zeplin</figcaption>
       </figure>
       <figure class="zeplin-2">
-        <img class="zeplin-2-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <img class="zeplin-2-image" src="floodlight-images/zeplin-2-image.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>Exporting screens to Zeplin</figcaption>
       </figure>
       <figure class="zeplin-3">
-        <img class="zeplin-3-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <img class="zeplin-3-image" src="floodlight-images/zeplin-3-image.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>Exporting screens to Zeplin</figcaption>
       </figure>
       <h3 class="user-acceptance-testing">User Acceptance Testing</h3>
       <p class="user-acceptance-testing-intro">During user acceptance testing (UAT) review of the staging environment, we navigated functionally challenges such as ensuring anchor links opened tabs appropriately and that videos showed the correct pre-play preview image and that GIFs played automatically for only 5 seconds or less,  according to accessibility guidelines. After several rounds of UAT review, the site was approved and went live on 7/28/21 at
         <a href="https://www.floodlightms.com">floodlightms.com</a></p>
       <figure class="final-homepage-layout">
-        <img class="homepage-layout-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <img class="homepage-layout-image" src="floodlight-images/homepage-layout-image.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>Final homepage after UAT</figcaption>
       </figure>
       <figure class="final-hcp-page-layout">
-        <img class="homepage-hcp-page-image" src="images/image-placeholder.png" alt="Floodlight MS Creative Layout"></img>
+        <img class="hcp-layout-image" src="floodlight-images/hcp-layout-image.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>Final HCP page after UAT</figcaption>
       </figure>
 
