--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -43,8 +43,8 @@
         <img class="navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo" width="62" style="padding:0px;"></a>
       <a class="nav-work" href="#work">About my work</a>
       <a class="nav-about" href="#about">About me</a>
-      <a class="nav-resume" href="documents/jessica_blanchard_resume_2.9.2.pdf" target="_blank">Download my resume</a>
-      <button class="nav-contact" href="https://www.jessblanchard.design/contact.html">Get in contact</button>
+      <a class="nav-resume" href="documents/jessica_blanchard_resume_02112022.pdf" target="_blank">Download my resume</a>
+      <button onclick="window.location.href = 'contact-2.0.html';">Get in contact</button>
       <!-- Original MOBILE NAV -->
           <nav class="mobilescreen">
                     <div title="Menu" id="menuToggle">
@@ -60,10 +60,10 @@
                             <a class="nav-about-mobile" href="#about">About Me</a>
                            </li>
                            <li>
-                             <a class="nav-resume-mobile" href="documents/jessica_blanchard_resume_2.9.2.pdf" target="_blank">Download my resume</a>
+                             <a class="nav-resume-mobile" href="documents/jessica_blanchard_resume_02112022.pdf" target="_blank">Download my resume</a>
                            </li>
                             <li>
-                              <button onclick="window.location.href = 'contact.html';">Get in contact</button>
+                              <button onclick="window.location.href = 'contact-2.0.html';">Get in contact</button>
                             </li>
                           </ul>
                       </div>
@@ -78,8 +78,8 @@
     <section class="hero">
       <h1 class="hero-headline">Hi, I’m Jess, a senior UX designer from New York</h1>
       <p class="hero-copy">I specialize in creating joyful and personal digital experiences that deliver true ROI every time.</p>
-      <button class="hero-contact" href="https://www.jessblanchard.design/contact.html">Get in contact</button>
-      <button class="hero-work secondary-cta" href="#work">Read case studies</button>
+      <button onclick="window.location.href = '#work';">Read case studies</button>
+
 
     </section>
 
@@ -96,7 +96,9 @@
         <h6 class="eyebrow-text">Pharmaceutical | Multiple Sclerosis</h6>
         <h5 class="featured-project-title">Floodlight MS responsive web design</h5>
         <p class="featured-project-description">Floodlight MS is an iOS and Android app that allows MS patients to engage in simple daily activities to objectively monitor symptoms and disease progression, while sharing the details with their care team. <br><br>My team designed an accessible website for the app, building upon the look and feel of an earlier microsite, while incorporating an expanded content strategy and applying a mobile first approach. </p>
-        <button class="see-the-full-case-study">See the full case study</button>
+        <!-- <button class="see-the-full-case-study">See the full case study</button> -->
+        <button onclick="window.location.href = 'floodlight-ms.html';">See the full case study</button>
+
       </div>
 
       <h3 class="additional-case-studies-headline">Additional case studies</h3>
