adjustment to additional work cards

--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -104,47 +104,43 @@
       <h3 class="additional-case-studies-headline">Additional case studies</h3>
 
       <div class="additional-work">
+
         <div class="card1">
+          <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
+          <h6 class="card-eyebrow-text">Non-profit | Community consulting</h6>
+          <h5 class="card-project-title">Intent Partners responsive web experience redesign </h5>
+          <button class="card-see-the-full-case-study">See the full case study</button>
+        </div>
+
+        <div class="card2">
+          <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
+          <h6 class="card-eyebrow-text">Wellness | Healthy lifestyle management</h6>
+          <h5 class="card-project-title">Verve ios app experience design </h5>
+          <button class="card-see-the-full-case-study">See the full case study</button>
+        </div>
+
+        <div class="card3">
           <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
           <h6 class="card-eyebrow-text">Pharmaceutical | Parkinsons-disease psychosis</h6>
           <h5 class="card-project-title">NUPLAZID healthcare provider responsive web experience redesign</h5>
           <button class="card-see-the-full-case-study">Coming soon</button>
         </div>
 
-        <div class="card2">
-          <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
-          <h6 class="card-eyebrow-text">Pharmaceutical | Vulvovaginal candidiasis</h6>
-          <h5 class="card-project-title">BREXAFEMME Consumer responsive web experience design</h5>
-          <button class="card-see-the-full-case-study">See the full case study</button>
-        </div>
-
-        <div class="card3">
+        <div class="card4">
           <img class="card-project-image" src="images/nih-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
           <h6 class="card-eyebrow-text">Life sciences | Technology database</h6>
           <h5 class="card-project-title">NIH Office of Technology Transfer responsive web experience design</h5>
-          <button class="card-see-the-full-case-study">See the full case study</button>
+          <button class="card-see-the-full-case-study">Coming soon</button>
         </div>
 
-        <div class="card4">
+        <!-- <div class="card5">
           <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
           <h6 class="card-eyebrow-text">Finance | Pre-approved offers</h6>
           <h5 class="card-project-title">Cunexus storefront responsive web experience redesign </h5>
-          <button class="card-see-the-full-case-study">See the full case study</button>
-        </div>
+          <button class="card-see-the-full-case-study">Coming soon</button>
+        </div> -->
 
-        <div class="card5">
-          <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
-          <h6 class="card-eyebrow-text">Non-profit | Community consulting</h6>
-          <h5 class="card-project-title">Cunexus storefront responsive web experience redesign </h5>
-          <button class="card-see-the-full-case-study">See the full case study</button>
-        </div>
 
-        <div class="card6">
-          <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
-          <h6 class="card-eyebrow-text">Wellness | Healthy lifestyle management</h6>
-          <h5 class="card-project-title">Cunexus storefront responsive web experience redesign </h5>
-          <button class="card-see-the-full-case-study">See the full case study</button>
-        </div>
 
 
       </div>
