--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -76,7 +76,7 @@
 
 
     <section class="hero">
-      <h1 class="hero-headline">Hi, I’m Jess, a senior UX designer from New York</h1>
+      <h1 class="hero-headline">Hi, I’m Jess, a lead UX designer from New York</h1>
       <p class="hero-copy">I specialize in creating joyful and personal digital experiences that deliver true ROI every time.</p>
       <button onclick="window.location.href = '#work';">Read case studies</button>
 
